--- a/src/client/scss/pages/centralControl.scss
+++ b/src/client/scss/pages/centralControl.scss
@@ -6,6 +6,7 @@
     column-gap: 2%;
     row-gap: 1%;
     .header {
+        margin-top: 1%;
         grid-area: 1 / 1 / 2 / 4;
         display: flex;
         flex-direction: column;
@@ -34,37 +35,15 @@
             flex: 2;
         }
         .input3 {
-            flex-basis: 3%;
+            width: 5%;
+            height: 70%;
             margin-right: 3%;
-            flex: 1;
         }
     }
-    .left {
-        grid-area: 2 / 1 / 2 / 1;
-        height: 100%;
-    }
-    .mid {
-        display: grid;
-        grid-area: 2 / 2 / 3 / 2;
-        grid-auto-flow: row;
-        grid-template-rows: 1fr 16fr;
-        row-gap: 1%;
-        align-items: flex-start;
-        height: 100%;
-        .button-warp {
-            display: flex;
-            flex-flow: row;
-            align-items: center;
-            justify-content: space-around;
-        }
-    }
-    .right {
-        display: grid;
-        grid-area: 2 / 3 / 3 / 3;
-        grid-auto-flow: row dense;
-        align-items: baseline;
-        row-gap: 2%;
-        height: 100%;
+    .body {
+        grid-area: 1 / 1 / 3 / 4;
+        margin-top: 7%;
+        max-height: 68.5%;
     }
     .absolute-full {
         position: fixed;
